o fixed name of css classes that collapsed with those from XCalendar
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings2/branches/ajax@3236 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/demo/wingset/src/web/css/wingset2.css
+++ b/demo/wingset/src/web/css/wingset2.css
@@ -1,4 +1,4 @@
-.header {
+.wingset_header {
 	width: 100%;
     padding: 5px 8px 2px 0px;
 	border-bottom: 1px solid #BEBEBE;
@@ -6,12 +6,12 @@
 	background-repeat: repeat-x;
 }
 
-.title {
+.wingset_title {
     font-size: 22px;
     margin-left: 15px;
 }
 
-.subtitle {
+.wingset_subtitle {
     font-size: 12px;
 	font-weight: lighter;
     margin-left: 10px;
